--- a/range.css
+++ b/range.css
@@ -117,7 +117,7 @@ width: 100%;
 
 }
 .start {
-width: 20%;
+width: 30px;
 height: 30px;
 text-indent: -999em;
 border: 1px solid #333;
@@ -125,7 +125,7 @@ cursor: pointer;
 background: url(./images/slide.png) no-repeat 0 0;
 }
 .stop {
-width: 20%;
+width: 30px;
 height: 30px;
 text-indent: -999em;
 border: 1px solid #333;
@@ -133,7 +133,7 @@ cursor: pointer;
 background: url(./images/slide.png) no-repeat -30px 0;
 }
 .after {
-width: 20%;
+width: 30px;
 height: 30px;
 text-indent: -999em;
 border: 1px solid #333;
@@ -141,7 +141,7 @@ cursor: pointer;
 background: url(./images/slide.png) no-repeat -60px 0;
 }
 .before {
-width: 20%;
+width: 30px;
 height: 30px;
 text-indent: -999em;
 border: 1px solid #333;
